--- a/taotao-cloud-microservice/taotao-cloud-gateway-webmvc/src/main/resources/application-test.yml
+++ b/taotao-cloud-microservice/taotao-cloud-gateway-webmvc/src/main/resources/application-test.yml
@@ -288,9 +288,9 @@ spring:
               filters:
                 - RewritePath=/auth/(?<path>.*), /auth/$\{path}
                 - StripPrefix=2
-                - RequestTime=true
-                - PreserveHostHeader
-                - SwaggerHeader
+                #- RequestTime=true
+                #- PreserveHostHeader
+                #- SwaggerHeader
                 - name: RequestRateLimiter
                   args:
                     key-resolver: '#{@remoteAddrKeyResolver}'
@@ -310,9 +310,9 @@ spring:
               filters:
                 - RewritePath=/customer/(?<path>.*), /customer/$\{path}
                 - StripPrefix=2
-                - RequestTime=true
-                - PreserveHostHeader
-                - SwaggerHeader
+                #- RequestTime=true
+                #- PreserveHostHeader
+                #- SwaggerHeader
                 - name: RequestRateLimiter
                   args:
                     key-resolver: '#{@remoteAddrKeyResolver}'
@@ -331,9 +331,9 @@ spring:
               filters:
                 - RewritePath=/distribution/(?<path>.*), /distribution/$\{path}
                 - StripPrefix=2
-                - RequestTime=true
-                - PreserveHostHeader
-                - SwaggerHeader
+                #- RequestTime=true
+                #- PreserveHostHeader
+                #- SwaggerHeader
                 - name: RequestRateLimiter
                   args:
                     key-resolver: '#{@remoteAddrKeyResolver}'
@@ -353,9 +353,9 @@ spring:
               filters:
                 - RewritePath=/file/(?<path>.*), /file/$\{path}
                 - StripPrefix=2
-                - RequestTime=true
-                - PreserveHostHeader
-                - SwaggerHeader
+                #- RequestTime=true
+                #- PreserveHostHeader
+                #- SwaggerHeader
                 - name: RequestRateLimiter
                   args:
                     key-resolver: '#{@remoteAddrKeyResolver}'
@@ -375,9 +375,9 @@ spring:
               filters:
                 - RewritePath=/tenant/(?<path>.*), /tenant/$\{path}
                 - StripPrefix=2
-                - RequestTime=true
-                - PreserveHostHeader
-                - SwaggerHeader
+                #- RequestTime=true
+                #- PreserveHostHeader
+                #- SwaggerHeader
                 - name: RequestRateLimiter
                   args:
                     key-resolver: '#{@remoteAddrKeyResolver}'
@@ -396,9 +396,9 @@ spring:
               filters:
                 - RewritePath=/flowable/(?<path>.*), /flowable/$\{path}
                 - StripPrefix=2
-                - RequestTime=true
-                - PreserveHostHeader
-                - SwaggerHeader
+                #- RequestTime=true
+                #- PreserveHostHeader
+                #- SwaggerHeader
                 - name: RequestRateLimiter
                   args:
                     key-resolver: '#{@remoteAddrKeyResolver}'
@@ -417,9 +417,9 @@ spring:
               filters:
                 - RewritePath=/generator/(?<path>.*), /generator/$\{path}
                 - StripPrefix=2
-                - RequestTime=true
-                - PreserveHostHeader
-                - SwaggerHeader
+                #- RequestTime=true
+                #- PreserveHostHeader
+                #- SwaggerHeader
                 - name: RequestRateLimiter
                   args:
                     key-resolver: '#{@remoteAddrKeyResolver}'
@@ -439,9 +439,9 @@ spring:
               filters:
                 - RewritePath=/job/(?<path>.*), /job/$\{path}
                 - StripPrefix=2
-                - RequestTime=true
-                - PreserveHostHeader
-                - SwaggerHeader
+                #- RequestTime=true
+                #- PreserveHostHeader
+                #- SwaggerHeader
                 - name: RequestRateLimiter
                   args:
                     key-resolver: '#{@remoteAddrKeyResolver}'
@@ -462,9 +462,9 @@ spring:
               filters:
                 - RewritePath=/stock/(?<path>.*), /stock/$\{path}
                 - StripPrefix=2
-                - RequestTime=true
-                - PreserveHostHeader
-                - SwaggerHeader
+                #- RequestTime=true
+                #- PreserveHostHeader
+                #- SwaggerHeader
                 - name: RequestRateLimiter
                   args:
                     key-resolver: '#{@remoteAddrKeyResolver}'
@@ -485,9 +485,9 @@ spring:
               filters:
                 - RewritePath=/settlement/(?<path>.*), /settlement/$\{path}
                 - StripPrefix=2
-                - RequestTime=true
-                - PreserveHostHeader
-                - SwaggerHeader
+                #- RequestTime=true
+                #- PreserveHostHeader
+                #- SwaggerHeader
                 - name: RequestRateLimiter
                   args:
                     key-resolver: '#{@remoteAddrKeyResolver}'
@@ -506,9 +506,9 @@ spring:
               filters:
                 - RewritePath=/search/(?<path>.*), /search/$\{path}
                 - StripPrefix=2
-                - RequestTime=true
-                - PreserveHostHeader
-                - SwaggerHeader
+                #- RequestTime=true
+                #- PreserveHostHeader
+                #- SwaggerHeader
                 - name: RequestRateLimiter
                   args:
                     key-resolver: '#{@remoteAddrKeyResolver}'
@@ -527,9 +527,9 @@ spring:
               filters:
                 - RewritePath=/report/(?<path>.*), /report/$\{path}
                 - StripPrefix=2
-                - RequestTime=true
-                - PreserveHostHeader
-                - SwaggerHeader
+                #- RequestTime=true
+                #- PreserveHostHeader
+                #- SwaggerHeader
                 - name: RequestRateLimiter
                   args:
                     key-resolver: '#{@remoteAddrKeyResolver}'
@@ -548,9 +548,9 @@ spring:
               filters:
                 - RewritePath=/recommend/(?<path>.*), /recommend/$\{path}
                 - StripPrefix=2
-                - RequestTime=true
-                - PreserveHostHeader
-                - SwaggerHeader
+                #- RequestTime=true
+                #- PreserveHostHeader
+                #- SwaggerHeader
                 - name: RequestRateLimiter
                   args:
                     key-resolver: '#{@remoteAddrKeyResolver}'
@@ -569,9 +569,9 @@ spring:
               filters:
                 - RewritePath=/promotion/(?<path>.*), /promotion/$\{path}
                 - StripPrefix=2
-                - RequestTime=true
-                - PreserveHostHeader
-                - SwaggerHeader
+                #- RequestTime=true
+                #- PreserveHostHeader
+                #- SwaggerHeader
                 - name: RequestRateLimiter
                   args:
                     key-resolver: '#{@remoteAddrKeyResolver}'
@@ -590,9 +590,9 @@ spring:
               filters:
                 - RewritePath=/payment/(?<path>.*), /payment/$\{path}
                 - StripPrefix=2
-                - RequestTime=true
-                - PreserveHostHeader
-                - SwaggerHeader
+                #- RequestTime=true
+                #- PreserveHostHeader
+                #- SwaggerHeader
                 - name: RequestRateLimiter
                   args:
                     key-resolver: '#{@remoteAddrKeyResolver}'
@@ -611,9 +611,9 @@ spring:
               filters:
                 - RewritePath=/operation/(?<path>.*), /operation/$\{path}
                 - StripPrefix=2
-                - RequestTime=true
-                - PreserveHostHeader
-                - SwaggerHeader
+                #- RequestTime=true
+                #- PreserveHostHeader
+                #- SwaggerHeader
                 - name: RequestRateLimiter
                   args:
                     key-resolver: '#{@remoteAddrKeyResolver}'
@@ -648,9 +648,9 @@ spring:
               filters:
                 - RewritePath=/message/(?<path>.*), /message/$\{path}
                 - StripPrefix=2
-                - RequestTime=true
-                - PreserveHostHeader
-                - SwaggerHeader
+                #- RequestTime=true
+                #- PreserveHostHeader
+                #- SwaggerHeader
                 - name: RequestRateLimiter
                   args:
                     key-resolver: '#{@remoteAddrKeyResolver}'
@@ -669,9 +669,9 @@ spring:
               filters:
                 - RewritePath=/member/(?<path>.*), /member/$\{path}
                 - StripPrefix=2
-                - RequestTime=true
-                - PreserveHostHeader
-                - SwaggerHeader
+                #- RequestTime=true
+                #- PreserveHostHeader
+                #- SwaggerHeader
                 - name: RequestRateLimiter
                   args:
                     key-resolver: '#{@remoteAddrKeyResolver}'
@@ -691,9 +691,9 @@ spring:
               filters:
                 - RewritePath=/bulletin/(?<path>.*), /bulletin/$\{path}
                 - StripPrefix=2
-                - RequestTime=true
-                - PreserveHostHeader
-                - SwaggerHeader
+                #- RequestTime=true
+                #- PreserveHostHeader
+                #- SwaggerHeader
                 - name: RequestRateLimiter
                   args:
                     key-resolver: '#{@remoteAddrKeyResolver}'
@@ -717,9 +717,9 @@ spring:
               filters:
                 - RewritePath=/sys/(?<path>.*), /sys/$\{path}
                 - StripPrefix=2
-                - RequestTime=true
-                - PreserveHostHeader
-                - SwaggerHeader
+                #- RequestTime=true
+                #- PreserveHostHeader
+                #- SwaggerHeader
             - id: taotao-cloud-order
               uri: lb://taotao-cloud-order
               metadata:
@@ -730,8 +730,8 @@ spring:
               filters:
                 - RewritePath=/order/(?<path>.*), /order/$\{path}
                 - StripPrefix=2
-                - PreserveHostHeader
-                - SwaggerHeader
+                #- PreserveHostHeader
+                #- SwaggerHeader
                 - name: RequestTime
                   args:
                     enabled: true
@@ -754,24 +754,24 @@ spring:
                 - Path=/v3/api-docs/**
               filters:
                 - RewritePath=/v3/api-docs/(?<path>.*), /$\{path}/v3/api-docs
-                - SwaggerHeader
+                #- SwaggerHeader
           #        - id: auth-user-password-token
           #          uri: lb://taotao-cloud-auth
           #          predicates:
           #            - Path=${taotao.cloud.gateway.base-uri}/auth/oauth/token/user
           #          filters:
           #            - StripPrefix=3
-          #            - RequestTime=true
+          #            #- RequestTime=true
           #            - ImageCode
-          #            - PreserveHostHeader
+          #            #- PreserveHostHeader
           #            - id: auth-login-third-token
           #              uri: lb://taotao-cloud-auth
           #              predicates:
           #                - Path=http://${taotao.cloud.gateway.base-uri}/auth/oauth/token/third
           #              filters:
           #                - StripPrefix=3
-          #                - RequestTime=true
-          #                - PreserveHostHeader
+          #                #- RequestTime=true
+          #                #- PreserveHostHeader
           #        # 发送短信接口要做接口限制
           #        - id: auth-sms-code
           #          uri: lb://taotao-cloud-auth
@@ -779,8 +779,8 @@ spring:
           #            - Path=http://${taotao.cloud.gateway.base-uri}/auth/sms/code
           #          filters:
           #            - StripPrefix=3
-          #            - RequestTime=true
-          #            - PreserveHostHeader
+          #            #- RequestTime=true
+          #            #- PreserveHostHeader
           #        # 数据重复校验要做接口限制
           #        - id: uc-repeact-check
           #          uri: lb://taotao-cloud-sys
@@ -788,8 +788,8 @@ spring:
           #            - Path=http://${taotao.cloud.gateway.base-uri}/uc/repeat/check
           #          filters:
           #            - StripPrefix=3
-          #            - RequestTime=true
-          #            - PreserveHostHeader
+          #            #- RequestTime=true
+          #            #- PreserveHostHeader
           #        - id: openapi
           #          uri: http://127.0.0.1:${server.port}
           #          predicates:
@@ -803,7 +803,7 @@ spring:
           #          filters:
           #            - RewritePath=/user/(?<path>.*), /$\{path}
           #            - StripPrefix=3
-          #            - PreserveHostHeader
+          #            #- PreserveHostHeader
           #            - name: RequestRateLimiter
           #              args:
           #                key-resolver: '#{@remoteAddrKeyResolver}'
@@ -815,7 +815,7 @@ spring:
           #            - Path=${taotao.cloud.gateway.base-uri}/auth/**
           #          filters:
           #            - StripPrefix=3
-          #            - PreserveHostHeader
+          #            #- PreserveHostHeader
           #            - name: RequestRateLimiter
           #              args:
           #                key-resolver: '#{@remoteAddrKeyResolver}'
