--- a/taotao-cloud-microservice/taotao-cloud-gateway-webmvc/src/main/resources/facility/application-alibaba.yml
+++ b/taotao-cloud-microservice/taotao-cloud-gateway-webmvc/src/main/resources/facility/application-alibaba.yml
@@ -265,9 +265,9 @@
 #          filters:
 #            - RewritePath=/stock/(?<path>.*), /stock/$\{path}
 #            - StripPrefix=2
-#            - RequestTime=true
-#            - PreserveHostHeader
-#            - SwaggerHeader
+#            #- RequestTime=true
+#            #- PreserveHostHeader
+#            #- SwaggerHeader
 #            - name: RequestRateLimiter
 #              args:
 #                key-resolver: '#{@remoteAddrKeyResolver}'
@@ -288,9 +288,9 @@
 #          filters:
 #            - RewritePath=/settlement/(?<path>.*), /settlement/$\{path}
 #            - StripPrefix=2
-#            - RequestTime=true
-#            - PreserveHostHeader
-#            - SwaggerHeader
+#            #- RequestTime=true
+#            #- PreserveHostHeader
+#            #- SwaggerHeader
 #            - name: RequestRateLimiter
 #              args:
 #                key-resolver: '#{@remoteAddrKeyResolver}'
@@ -309,9 +309,9 @@
 #          filters:
 #            - RewritePath=/search/(?<path>.*), /search/$\{path}
 #            - StripPrefix=2
-#            - RequestTime=true
-#            - PreserveHostHeader
-#            - SwaggerHeader
+#            #- RequestTime=true
+#            #- PreserveHostHeader
+#            #- SwaggerHeader
 #            - name: RequestRateLimiter
 #              args:
 #                key-resolver: '#{@remoteAddrKeyResolver}'
@@ -330,9 +330,9 @@
 #          filters:
 #            - RewritePath=/report/(?<path>.*), /report/$\{path}
 #            - StripPrefix=2
-#            - RequestTime=true
-#            - PreserveHostHeader
-#            - SwaggerHeader
+#            #- RequestTime=true
+#            #- PreserveHostHeader
+#            #- SwaggerHeader
 #            - name: RequestRateLimiter
 #              args:
 #                key-resolver: '#{@remoteAddrKeyResolver}'
@@ -351,9 +351,9 @@
 #          filters:
 #            - RewritePath=/recommend/(?<path>.*), /recommend/$\{path}
 #            - StripPrefix=2
-#            - RequestTime=true
-#            - PreserveHostHeader
-#            - SwaggerHeader
+#            #- RequestTime=true
+#            #- PreserveHostHeader
+#            #- SwaggerHeader
 #            - name: RequestRateLimiter
 #              args:
 #                key-resolver: '#{@remoteAddrKeyResolver}'
@@ -372,9 +372,9 @@
 #          filters:
 #            - RewritePath=/promotion/(?<path>.*), /promotion/$\{path}
 #            - StripPrefix=2
-#            - RequestTime=true
-#            - PreserveHostHeader
-#            - SwaggerHeader
+#            #- RequestTime=true
+#            #- PreserveHostHeader
+#            #- SwaggerHeader
 #            - name: RequestRateLimiter
 #              args:
 #                key-resolver: '#{@remoteAddrKeyResolver}'
@@ -393,9 +393,9 @@
 #          filters:
 #            - RewritePath=/payment/(?<path>.*), /payment/$\{path}
 #            - StripPrefix=2
-#            - RequestTime=true
-#            - PreserveHostHeader
-#            - SwaggerHeader
+#            #- RequestTime=true
+#            #- PreserveHostHeader
+#            #- SwaggerHeader
 #            - name: RequestRateLimiter
 #              args:
 #                key-resolver: '#{@remoteAddrKeyResolver}'
@@ -414,9 +414,9 @@
 #          filters:
 #            - RewritePath=/operation/(?<path>.*), /operation/$\{path}
 #            - StripPrefix=2
-#            - RequestTime=true
-#            - PreserveHostHeader
-#            - SwaggerHeader
+#            #- RequestTime=true
+#            #- PreserveHostHeader
+#            #- SwaggerHeader
 #            - name: RequestRateLimiter
 #              args:
 #                key-resolver: '#{@remoteAddrKeyResolver}'
@@ -435,9 +435,9 @@
 #          filters:
 #            - RewritePath=/message/(?<path>.*), /message/$\{path}
 #            - StripPrefix=2
-#            - RequestTime=true
-#            - PreserveHostHeader
-#            - SwaggerHeader
+#            #- RequestTime=true
+#            #- PreserveHostHeader
+#            #- SwaggerHeader
 #            - name: RequestRateLimiter
 #              args:
 #                key-resolver: '#{@remoteAddrKeyResolver}'
@@ -456,9 +456,9 @@
 #          filters:
 #            - RewritePath=/member/(?<path>.*), /member/$\{path}
 #            - StripPrefix=2
-#            - RequestTime=true
-#            - PreserveHostHeader
-#            - SwaggerHeader
+#            #- RequestTime=true
+#            #- PreserveHostHeader
+#            #- SwaggerHeader
 #            - name: RequestRateLimiter
 #              args:
 #                key-resolver: '#{@remoteAddrKeyResolver}'
@@ -477,9 +477,9 @@
 #          filters:
 #            - RewritePath=/distribution/(?<path>.*), /distribution/$\{path}
 #            - StripPrefix=2
-#            - RequestTime=true
-#            - PreserveHostHeader
-#            - SwaggerHeader
+#            #- RequestTime=true
+#            #- PreserveHostHeader
+#            #- SwaggerHeader
 #            - name: RequestRateLimiter
 #              args:
 #                key-resolver: '#{@remoteAddrKeyResolver}'
@@ -498,9 +498,9 @@
 #          filters:
 #            - RewritePath=/customer/(?<path>.*), /customer/$\{path}
 #            - StripPrefix=2
-#            - RequestTime=true
-#            - PreserveHostHeader
-#            - SwaggerHeader
+#            #- RequestTime=true
+#            #- PreserveHostHeader
+#            #- SwaggerHeader
 #            - name: RequestRateLimiter
 #              args:
 #                key-resolver: '#{@remoteAddrKeyResolver}'
@@ -519,9 +519,9 @@
 #          filters:
 #            - RewritePath=/bulletin/(?<path>.*), /bulletin/$\{path}
 #            - StripPrefix=2
-#            - RequestTime=true
-#            - PreserveHostHeader
-#            - SwaggerHeader
+#            #- RequestTime=true
+#            #- PreserveHostHeader
+#            #- SwaggerHeader
 #            - name: RequestRateLimiter
 #              args:
 #                key-resolver: '#{@remoteAddrKeyResolver}'
@@ -540,9 +540,9 @@
 #          filters:
 #            - RewritePath=/auth/(?<path>.*), /auth/$\{path}
 #            - StripPrefix=2
-#            - RequestTime=true
-#            - PreserveHostHeader
-#            - SwaggerHeader
+#            #- RequestTime=true
+#            #- PreserveHostHeader
+#            #- SwaggerHeader
 #            - name: RequestRateLimiter
 #              args:
 #                key-resolver: '#{@remoteAddrKeyResolver}'
@@ -561,9 +561,9 @@
 #          filters:
 #            - RewritePath=/sys/(?<path>.*), /sys/$\{path}
 #            - StripPrefix=2
-#            - RequestTime=true
-#            - PreserveHostHeader
-#            - SwaggerHeader
+#            #- RequestTime=true
+#            #- PreserveHostHeader
+#            #- SwaggerHeader
 #        - id: taotao-cloud-order
 #          uri: lb://taotao-cloud-order
 #          metadata:
@@ -573,9 +573,9 @@
 #          filters:
 #            - RewritePath=/order/(?<path>.*), /order/$\{path}
 #            - StripPrefix=2
-#            - RequestTime=true
-#            - PreserveHostHeader
-#            - SwaggerHeader
+#            #- RequestTime=true
+#            #- PreserveHostHeader
+#            #- SwaggerHeader
 #            - name: RequestRateLimiter
 #              args:
 #                key-resolver: '#{@remoteAddrKeyResolver}'
@@ -595,24 +595,24 @@
 #            - Path=/v3/api-docs/**
 #          filters:
 #            - RewritePath=/v3/api-docs/(?<path>.*), /$\{path}/v3/api-docs
-#            - SwaggerHeader
+#            #- SwaggerHeader
 #      #        - id: auth-user-password-token
 #      #          uri: lb://taotao-cloud-auth
 #      #          predicates:
 #      #            - Path=${taotao.cloud.gateway.base-uri}/auth/oauth/token/user
 #      #          filters:
 #      #            - StripPrefix=3
-#      #            - RequestTime=true
+#      #            #- RequestTime=true
 #      #            - ImageCode
-#      #            - PreserveHostHeader
+#      #            #- PreserveHostHeader
 #      #            - id: auth-login-third-token
 #      #              uri: lb://taotao-cloud-auth
 #      #              predicates:
 #      #                - Path=http://${taotao.cloud.gateway.base-uri}/auth/oauth/token/third
 #      #              filters:
 #      #                - StripPrefix=3
-#      #                - RequestTime=true
-#      #                - PreserveHostHeader
+#      #                #- RequestTime=true
+#      #                #- PreserveHostHeader
 #      #        # 发送短信接口要做接口限制
 #      #        - id: auth-sms-code
 #      #          uri: lb://taotao-cloud-auth
@@ -620,8 +620,8 @@
 #      #            - Path=http://${taotao.cloud.gateway.base-uri}/auth/sms/code
 #      #          filters:
 #      #            - StripPrefix=3
-#      #            - RequestTime=true
-#      #            - PreserveHostHeader
+#      #            #- RequestTime=true
+#      #            #- PreserveHostHeader
 #      #        # 数据重复校验要做接口限制
 #      #        - id: uc-repeact-check
 #      #          uri: lb://taotao-cloud-sys
@@ -629,8 +629,8 @@
 #      #            - Path=http://${taotao.cloud.gateway.base-uri}/uc/repeat/check
 #      #          filters:
 #      #            - StripPrefix=3
-#      #            - RequestTime=true
-#      #            - PreserveHostHeader
+#      #            #- RequestTime=true
+#      #            #- PreserveHostHeader
 #      #        - id: openapi
 #      #          uri: http://127.0.0.1:${server.port}
 #      #          predicates:
@@ -644,7 +644,7 @@
 #      #          filters:
 #      #            - RewritePath=/user/(?<path>.*), /$\{path}
 #      #            - StripPrefix=3
-#      #            - PreserveHostHeader
+#      #            #- PreserveHostHeader
 #      #            - name: RequestRateLimiter
 #      #              args:
 #      #                key-resolver: '#{@remoteAddrKeyResolver}'
@@ -656,7 +656,7 @@
 #      #            - Path=${taotao.cloud.gateway.base-uri}/auth/**
 #      #          filters:
 #      #            - StripPrefix=3
-#      #            - PreserveHostHeader
+#      #            #- PreserveHostHeader
 #      #            - name: RequestRateLimiter
 #      #              args:
 #      #                key-resolver: '#{@remoteAddrKeyResolver}'
